force-app/main/default/objects/Study_status_description_motivation__c/Study_status_description_motivation__c.object-meta.xml
<CustomObject>
    <label>Study status&apos;s description &amp; motivation</label>
    <nameField>
        <displayFormat>SSDM-{0000}</displayFormat>
        <label>Study status&apos;s description &amp; motivation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study status&apos;s description &amp; motivation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>