force-app/main/default/objects/Study_status_description_motivation__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>