force-app/main/default/objects/Study_status_description_motivation__c/fields/Status_Motivational_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Motivational_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Motivational Message</label>
    <length>225</length>
    <type>Text</type>
</CustomField>