force-app/main/default/objects/Study_status_description_motivation__c/fields/Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>