force-app/main/default/objects/Study_status_description_motivation__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <label>Study</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Study status&apos;s description &amp; motivation</relationshipLabel>
    <relationshipName>Study_status_description_motivation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>